[project]
name = "reposort"
version = "0.1.0"
description = "Organize git repositories by their origin URL"
authors = [{ name = "thys", email = "thys@example.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
reposort = "reposort.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reposort"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[tool.ty.src]
include = ["src"]

[tool.ty.terminal]
error-on-warning = true

[dependency-groups]
dev = [
    "ty>=0.0.7",
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
]
