[project]
name = "reposort"
version = "1.0.0"
description = "Organize git repositories by their origin URL"
authors = [{ name = "thys", email = "sthysel@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
reposort = "reposort.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reposort"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[tool.ty.src]
include = ["src"]

[tool.ty.terminal]
error-on-warning = true

[tool.bumpversion]
current_version = "1.0.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "README.md"
search = "# reposort v{current_version}"
replace = "# reposort v{new_version}"

[dependency-groups]
dev = [
    "ty>=0.0.7",
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
    "bump-my-version>=1.2.5",
]
